<resources>
    <string name="app_name">To Do</string>
    <string name="complete_to_do">Complete To Do</string>
    <string name="to_do_title">Title:</string>
    <string name="to_do_date">Date:</string>
    <string name="to_do_priority">Priority:</string>
    <string name="date_picker_title">To Do Due Date</string>
    <string name="new_to_do">Add To Do</string>
    <string name="settings">Settings</string>
    <string name="select_theme">Select Theme</string>
    <string name="theme_one">Theme One</string>
    <string name="theme_two">Theme Two</string>
</resources>
